# moveit_pro_xarm_configs

./: .gitmodules  Dockerfile  README.md  colcon-defaults.yaml  docker-compose.yaml
src/xarm7_config/: CMakeLists.txt  README.md  package.xml
src/xarm7_config/config/: config.yaml
src/xarm7_config/objectives/: close_gripper.xml  open_gripper.xml  teleoperate.xml  (+3 more)
src/xarm7_sim_config/: CMakeLists.txt  README.md  package.xml
src/xarm7_sim_config/config/: config.yaml
src/xarm7_sim_config/config/control/: controllers.yaml
src/xarm7_sim_config/description/: _private_macro.xacro  mujoco.ros2_control.xacro  picknik_xarm.xacro  picknik_xarm_macro.xacro  xarm7_robot_macro.xacro  xarm_device.urdf.xacro  xarm_device_macro.xacro  xarm_gripper_macro.xacro
src/xarm7_sim_config/description/mujoco/: scene.xml  xarm7.xml  xarm7_globals.xml
src/xarm7_sim_config/objectives/: move_to_waypoint.xml
src/xarm7_sim_config/waypoints/: waypoints.yaml
src/xarm_base_config/: CMakeLists.txt  README.md  package.xml
src/xarm_base_config/config/: config.yaml
src/xarm_base_config/config/control/: controllers.yaml
src/xarm_base_config/config/moveit/: ompl_planning.yaml  pose_ik_distance.yaml  pose_jog.yaml  servo.yaml  xarm.srdf.xacro
src/xarm_base_config/description/: picknik_xarm.xacro  picknik_xarm_macro.xacro
src/xarm_base_config/launch/: robot_drivers_to_persist.launch.py
src/xarm_base_config/launch/sim/: robot_drivers_to_persist_sim.launch.py
src/xarm_base_config/objectives/: close_gripper.xml  interpolate_to_joint_state.xml  move_to_joint_state.xml  move_to_pose.xml  open_gripper.xml  request_teleoperation.xml
(+1 files in other folders)
