<?xml version="1.0" ?>
<package format="3">
  <name>xarm7_sim_config</name>
  <version>6.5.0</version>

  <description>
    Specialized config for the xarm7.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <depend>xarm_base_config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
