<?xml version="1.0" ?>
<package format="3">
  <name>xarm_base_config</name>
  <version>6.5.0</version>

  <description>
    Base configuration package for UFACTORY xarm robot arms.
  </description>

  <maintainer email="support@picknik.ai">MoveIt Pro Maintainer</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_planners_stomp</exec_depend>
  <exec_depend>moveit_studio_agent</exec_depend>
  <exec_depend>moveit_studio_behavior</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>xarm_description</exec_depend>
  <exec_depend>xarm_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <test_depend>ament_clang_format</test_depend>
  <test_depend>ament_clang_tidy</test_depend>
  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>picknik_ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
